Fixed opacity text overlapping Header

--- a/frontEnd/src/Components/Cards/CardRentalGrid.scss
+++ b/frontEnd/src/Components/Cards/CardRentalGrid.scss
@@ -54,7 +54,6 @@
 
                 h3 {
                     font-size: globals.$font-size-2;
-                    opacity: 0.5;
                 }
 
                 .rental-rating--stars {
