--- a/frontEnd/src/sassStyles/abstracts/_variables.scss
+++ b/frontEnd/src/sassStyles/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $bg-gray: rgb(247, 247, 247);
 
 $text-dark: rgba(25, 27, 29, 1);
 $text-gray: rgba(56, 59, 88, 1);
+$text-gray-light: rgba(56, 59, 88, 0.5);
 $text-medium: rgba(223, 228, 234, 1);
 $text-light: #fff;
 $text-placeholder: rgba(127, 127, 127, 1);
