--- a/frontEnd/src/sassStyles/base/_general.scss
+++ b/frontEnd/src/sassStyles/base/_general.scss
@@ -116,6 +116,10 @@ input {
   color: variables.$text-gray;
 }
 
+.text-gray-light {
+  color: variables.$text-gray-light;
+}
+
 .section-header {
   margin-bottom: variables.$m-3;
 }
